attempting to fix mobile canvas overflow

--- a/styles/scss/homePage/_carousel.module.scss
+++ b/styles/scss/homePage/_carousel.module.scss
@@ -11,9 +11,7 @@
     // @include fullviewPort();
     height: 100vh;
     width: 100vw;
-    -webkit-transform: translateZ(0);
-    -webkit-backface-visibility: hidden;
-    position:fixed;
+    position: sticky;
     padding:0;
     margin:0;
     top:0;
